syntax = "proto3";
package waves.node.grpc;
option java_package = "com.wavesplatform.api.grpc";
option csharp_namespace = "Waves.Node.Grpc";
option go_package = "github.com/wavesplatform/gowaves/pkg/grpc/generated/waves/node/grpc";

import "waves/amount.proto";
import "waves/transaction.proto";
import "waves/recipient.proto";
import "google/protobuf/wrappers.proto";

service AccountsApi {
    rpc GetBalances (BalancesRequest) returns (stream BalanceResponse);
    rpc GetScript (AccountRequest) returns (ScriptData);
    rpc GetActiveLeases (AccountRequest) returns (stream LeaseResponse);
    rpc GetDataEntries (DataRequest) returns (stream DataEntryResponse);
    rpc ResolveAlias (google.protobuf.StringValue) returns (google.protobuf.BytesValue);
}

message AccountRequest {
    bytes address = 1;
}

message DataRequest {
    bytes address = 1;
    string key = 2;
}

message BalancesRequest {
    bytes address = 1;
    repeated bytes assets = 4;
}

message BalanceResponse {
    message WavesBalances {
        int64 regular = 1;
        int64 generating = 2;
        int64 available = 3;
        int64 effective = 4;
        int64 lease_in = 5;
        int64 lease_out = 6;
    }

    oneof balance {
        WavesBalances waves = 1;
        Amount asset = 2;
    }
}

message DataEntryResponse {
    bytes address = 1;
    DataTransactionData.DataEntry entry = 2;
}

message ScriptData {
    bytes script_bytes = 1;
    string script_text = 2;
    int64 complexity = 3;
}

message LeaseResponse {
    bytes leaseId = 1;
    bytes originTransactionId = 2;
    bytes sender = 3;
    Recipient recipient = 4;
    int64 amount = 5;
    int64 height = 6;
}
